@@ -1,3 +1,6 @@
+2012-09-09
+ * night_next command, allows darks in queue
+
 2012-09-03
  * publish-subscribe support * for all values
 
